--- a/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
@@ -15,53 +15,54 @@ dependencies:
   - zlib=1.2.13=h8cc25b3_1
   - pip:
       - absolufy-imports==0.3.1
-      - agno==2.0.4
+      - agno==2.1.4
       - aiohappyeyeballs==2.6.1
-      - aiohttp==3.12.15
+      - aiohttp==3.13.0
       - aiosignal==1.4.0
       - aiosqlite==0.21.0
       - albucore==0.0.33
-      - alembic==1.16.5
+      - alembic==1.17.0
       - altair==5.5.0
       - annotated-types==0.7.0
       - ansicon==1.89.0
-      - anthropic==0.67.0
+      - anthropic==0.69.0
       - antlr4-python3-runtime==4.9.3
-      - anyio==4.10.0
+      - anyio==4.11.0
       - arena-api==2.5.9
       - argon2-cffi==25.1.0
       - argon2-cffi-bindings==25.1.0
       - arrow==1.3.0
-      - asgiref==3.9.1
+      - asgiref==3.10.0
       - asttokens==3.0.0
       - async-lru==2.0.5
       - async-timeout==5.0.1
-      - attrs==25.3.0
-      - authlib==1.6.3
+      - attrs==25.4.0
+      - authlib==1.6.5
       - autocommand==2.2.2
       - azure-core==1.35.1
-      - azure-identity==1.25.0
+      - azure-identity==1.25.1
       - babel==2.17.0
       - backoff==2.2.1
       - backports-tarfile==1.2.0
       - banks==2.2.0
-      - bcrypt==4.3.0
-      - beautifulsoup4==4.13.5
+      - bcrypt==5.0.0
+      - beautifulsoup4==4.14.2
       - bleach==6.2.0
       - blessed==1.22.0
       - blinker==1.9.0
       - braincube-connector==2.8.0
+      - brotli==1.1.0
       - build==1.3.0
       - cachetools==5.5.2
-      - certifi==2025.8.3
+      - certifi==2025.10.5
       - cffi==2.0.0
       - chardet==5.2.0
-      - charset-normalizer==3.4.3
+      - charset-normalizer==3.4.4
       - chroma-hnswlib==0.7.6
-      - chromadb==1.0.21
-      - click==8.2.1
+      - chromadb==1.1.1
+      - click==8.3.0
       - click-default-group==1.2.4
-      - click-option-group==0.5.7
+      - click-option-group==0.5.9
       - cloudpickle==3.1.1
       - clr-loader==0.2.7.post0
       - colorama==0.4.6
@@ -69,14 +70,14 @@ dependencies:
       - comm==0.2.3
       - condense-json==0.1.3
       - contourpy==1.3.3
-      - cryptography==45.0.7
+      - cryptography==46.0.2
       - curl-cffi==0.13.0
       - cycler==0.12.1
       - cython==3.1.4
       - dataclasses-json==0.6.7
       - db-dtypes==1.4.3
-      - ddgs==9.5.5
-      - debugpy==1.8.16
+      - ddgs==9.6.1
+      - debugpy==1.8.17
       - decorator==5.2.1
       - defusedxml==0.7.1
       - deprecated==1.2.18
@@ -86,53 +87,53 @@ dependencies:
       - distro==1.9.0
       - dnspython==2.8.0
       - docstring-parser==0.17.0
-      - docutils==0.22
+      - docutils==0.22.2
       - durationpy==0.10
       - email-validator==2.3.0
       - eval-type-backport==0.2.2
       - executing==2.2.1
-      - fastapi==0.116.2
-      - fastavro==1.12.0
+      - fastapi==0.119.0
+      - fastavro==1.12.1
       - fastjsonschema==2.21.2
-      - filelock==3.19.1
+      - filelock==3.20.0
       - filetype==1.2.0
       - flake8==7.3.0
       - flask==3.1.2
       - flatbuffers==25.2.10
-      - fonttools==4.59.2
+      - fonttools==4.60.1
       - fpdf2==2.8.4
       - fqdn==1.5.1
       - frozendict==2.4.6
-      - frozenlist==1.7.0
+      - frozenlist==1.8.0
       - fsspec==2025.9.0
       - geojson==3.2.0
       - gitdb==4.0.12
       - gitpython==3.1.45
       - google-ai-generativelanguage==0.6.15
-      - google-api-core==2.25.1
+      - google-api-core==2.26.0
       - google-api-python-client==2.181.0
-      - google-auth==2.40.3
+      - google-auth==2.41.1
       - google-auth-httplib2==0.2.0
       - google-auth-oauthlib==1.2.2
-      - google-cloud-aiplatform==1.113.0
+      - google-cloud-aiplatform==1.120.0
       - google-cloud-appengine-logging==1.6.2
       - google-cloud-artifact-registry==1.16.1
-      - google-cloud-audit-log==0.3.2
-      - google-cloud-bigquery==3.37.0
-      - google-cloud-bigtable==2.32.0
-      - google-cloud-compute==1.37.0
+      - google-cloud-audit-log==0.3.3
+      - google-cloud-bigquery==3.38.0
+      - google-cloud-bigtable==2.33.0
+      - google-cloud-compute==1.39.0
       - google-cloud-core==2.4.3
       - google-cloud-logging==3.12.1
-      - google-cloud-pipeline-components==2.20.1
+      - google-cloud-pipeline-components==2.21.0
       - google-cloud-resource-manager==1.14.2
-      - google-cloud-secret-manager==2.24.0
-      - google-cloud-spanner==3.57.0
+      - google-cloud-secret-manager==2.25.0
+      - google-cloud-spanner==3.58.0
       - google-cloud-speech==2.33.0
       - google-cloud-storage==2.19.0
       - google-cloud-trace==1.16.2
       - google-cloud-vision==3.10.2
       - google-crc32c==1.7.1
-      - google-genai==1.37.0
+      - google-genai==1.43.0
       - google-generativeai==0.8.5
       - google-resumable-media==2.7.2
       - googleapis-common-protos==1.70.0
@@ -142,20 +143,23 @@ dependencies:
       - griffe==1.14.0
       - grpc-google-iam-v1==0.14.2
       - grpc-interceptor==0.15.4
-      - grpcio==1.75.0
+      - grpcio==1.75.1
       - grpcio-status==1.62.3
-      - h11==0.14.0
-      - h5py==3.14.0
-      - httpcore==1.0.5
+      - h11==0.16.0
+      - h2==4.3.0
+      - h5py==3.15.0
+      - hpack==4.1.0
+      - httpcore==1.0.9
       - httplib2==0.31.0
-      - httptools==0.6.4
+      - httptools==0.7.1
       - httpx==0.28.1
-      - httpx-sse==0.4.1
-      - huggingface-hub==0.35.0
+      - httpx-sse==0.4.3
+      - huggingface-hub==0.35.3
       - humanfriendly==10.0
       - hydra-core==1.3.2
+      - hyperframe==6.1.0
       - icalendar==6.3.1
-      - idna==3.10
+      - idna==3.11
       - ijson==3.4.0
       - imageio==2.37.0
       - importlib-metadata==8.4.0
@@ -165,11 +169,11 @@ dependencies:
       - iniconfig==2.1.0
       - intel-cmplr-lib-ur==2025.2.1
       - intel-openmp==2025.2.1
-      - invoke==2.2.0
+      - invoke==2.2.1
       - iopath==0.1.10
       - iprogress==0.4
-      - ipykernel==6.30.1
-      - ipython==9.5.0
+      - ipykernel==7.0.1
+      - ipython==9.6.0
       - ipython-genutils==0.2.0
       - ipython-pygments-lexers==1.1.1
       - isoduration==20.11.0
@@ -180,7 +184,7 @@ dependencies:
       - jax==0.7.2
       - jaxlib==0.7.2
       - jedi==0.19.2
-      - jh2==5.0.9
+      - jh2==5.0.10
       - jinja2==3.1.6
       - jinxed==1.3.0
       - jiter==0.11.0
@@ -202,7 +206,7 @@ dependencies:
       - jupyter-nbextensions-configurator==0.6.4
       - jupyter-server==2.17.0
       - jupyter-server-terminals==0.5.3
-      - jupyterlab==4.4.7
+      - jupyterlab==4.4.9
       - jupyterlab-pygments==0.3.0
       - jupyterlab-server==2.27.3
       - kfp==2.13.0
@@ -210,17 +214,17 @@ dependencies:
       - kfp-server-api==2.4.0
       - kiwisolver==1.4.9
       - kubernetes==30.1.0
-      - lance-namespace==0.0.6
-      - lance-namespace-urllib3-client==0.0.14
-      - lancedb==0.25.0
+      - lance-namespace==0.0.18
+      - lance-namespace-urllib3-client==0.0.18
+      - lancedb==0.25.2
       - langchain==0.3.27
-      - langchain-community==0.3.29
-      - langchain-core==0.3.76
-      - langchain-openai==0.3.33
+      - langchain-community==0.3.31
+      - langchain-core==0.3.79
+      - langchain-openai==0.3.35
       - langchain-text-splitters==0.3.11
-      - langgraph-sdk==0.2.7
-      - langsmith==0.4.28
-      - lark==1.2.2
+      - langgraph-sdk==0.2.9
+      - langsmith==0.4.35
+      - lark==1.3.0
       - lazy-loader==0.4
       - lightning==2.5.5
       - lightning-utilities==0.15.2
@@ -233,7 +237,7 @@ dependencies:
       - llama-index-core==0.12.52.post1
       - llama-index-embeddings-openai==0.3.1
       - llama-index-indices-managed-llama-cloud==0.8.0
-      - llama-index-instrumentation==0.4.1
+      - llama-index-instrumentation==0.4.2
       - llama-index-legacy==0.9.48.post3
       - llama-index-llms-ollama==0.6.2
       - llama-index-llms-openai==0.4.7
@@ -246,24 +250,24 @@ dependencies:
       - llama-parse==0.6.53
       - llamaindex-py-client==0.1.19
       - llm==0.27.1
-      - llm-anthropic==0.18
+      - llm-anthropic==0.19
       - llm-claude-3==0.11
-      - llm-gemini==0.25
-      - llm-ollama==0.14.0
-      - llvmlite==0.44.0
+      - llm-gemini==0.26.1
+      - llm-ollama==0.15.0
+      - llvmlite==0.45.1
       - lmdb==1.7.3
-      - lxml==6.0.1
+      - lxml==6.0.2
       - mako==1.3.10
       - markdown==3.9
       - markdown-it-py==4.0.0
-      - markupsafe==3.0.2
+      - markupsafe==3.0.3
       - marshmallow==3.26.1
-      - matplotlib==3.10.6
+      - matplotlib==3.10.7
       - matplotlib-inline==0.1.7
       - mccabe==0.7.0
-      - mcp==1.14.0
+      - mcp==1.17.0
       - mdurl==0.1.2
-      - mistralai==1.9.10
+      - mistralai==1.9.11
       - mistune==3.1.4
       - mkl==2025.2.0
       - ml-dtypes==0.5.3
@@ -272,39 +276,39 @@ dependencies:
       - more-itertools==10.8.0
       - mplfinance==0.12.10b0
       - mpmath==1.3.0
-      - msal==1.33.0
+      - msal==1.34.0
       - msal-extensions==1.3.1
-      - multidict==6.6.4
+      - multidict==6.7.0
       - multitasking==0.0.12
       - mypy-extensions==1.1.0
-      - narwhals==2.5.0
+      - narwhals==2.8.0
       - nbclient==0.10.2
       - nbconvert==7.16.6
       - nbformat==5.10.4
       - nest-asyncio==1.6.0
       - networkx==3.5
       - niquests==3.15.2
-      - nltk==3.9.1
+      - nltk==3.9.2
       - nodeenv==1.9.1
-      - notebook==7.4.5
+      - notebook==7.4.7
       - notebook-shim==0.2.4
-      - numba==0.61.2
-      - numpy==2.2.4
+      - numba==0.62.1
+      - numpy==2.2.6
       - oauthlib==3.3.1
-      - ollama==0.5.4
+      - ollama==0.6.0
       - omegaconf==2.3.0
-      - onnxruntime==1.22.1
-      - openai==1.107.3
+      - onnxruntime==1.23.1
+      - openai==1.109.0
       - opencv-contrib-python==4.12.0.88
       - opencv-python==4.12.0.88
       - opencv-python-headless==4.12.0.88
-      - openinference-instrumentation==0.1.38
-      - openinference-instrumentation-langchain==0.1.52
-      - openinference-instrumentation-llama-index==4.3.5
-      - openinference-instrumentation-openai==0.1.32
-      - openinference-semantic-conventions==0.1.21
-      - openmeteo-requests==1.7.2
-      - openmeteo-sdk==1.20.1
+      - openinference-instrumentation==0.1.40
+      - openinference-instrumentation-langchain==0.1.53
+      - openinference-instrumentation-llama-index==4.3.6
+      - openinference-instrumentation-openai==0.1.39
+      - openinference-semantic-conventions==0.1.24
+      - openmeteo-requests==1.7.3
+      - openmeteo-sdk==1.21.2
       - opentelemetry-api==1.27.0
       - opentelemetry-exporter-gcp-trace==1.9.0
       - opentelemetry-exporter-otlp==1.27.0
@@ -321,7 +325,7 @@ dependencies:
       - opentelemetry-util-http==0.48b0
       - opt-einsum==3.4.0
       - orjson==3.11.3
-      - ormsgpack==1.10.0
+      - ormsgpack==1.11.0
       - overrides==7.7.0
       - packaging==25.0
       - pandas==2.2.3
@@ -334,19 +338,19 @@ dependencies:
       - persist-queue==1.0.0
       - pillow==11.3.0
       - pip==25.2
-      - pipdeptree==2.28.0
-      - platformdirs==4.4.0
+      - pipdeptree==2.29.0
+      - platformdirs==4.5.0
       - pluggy==1.6.0
       - plyfile==1.1.2
       - portalocker==3.2.0
       - posthog==5.4.0
       - primp==0.15.0
-      - prometheus-client==0.22.1
+      - prometheus-client==0.23.1
       - prompt-toolkit==3.0.52
-      - propcache==0.3.2
+      - propcache==0.4.1
       - proto-plus==1.26.1
       - protobuf==4.25.5
-      - psutil==7.0.0
+      - psutil==7.1.0
       - pure-eval==0.2.3
       - puremagic==1.30
       - pyarrow==21.0.0
@@ -355,60 +359,60 @@ dependencies:
       - pybase64==1.4.2
       - pycodestyle==2.14.0
       - pycparser==2.23
-      - pydantic==2.11.9
-      - pydantic-core==2.33.2
-      - pydantic-settings==2.10.1
+      - pydantic==2.12.2
+      - pydantic-core==2.41.4
+      - pydantic-settings==2.11.0
       - pydata-google-auth==1.9.1
       - pydeck==0.9.1
       - pyflakes==3.4.0
       - pygithub==2.8.1
       - pygments==2.19.2
       - pyjwt==2.10.1
-      - pylance==0.36.0
+      - pylance==0.38.2
       - pylucidio==2.4
       - pymage-size==1.7.1
       - pymodbustcp==0.3.0
-      - pymupdf==1.26.4
+      - pymupdf==1.26.5
       - pynacl==1.6.0
       - pyowm==3.5.0
-      - pyparsing==3.2.4
+      - pyparsing==3.2.5
       - pypdf==5.9.0
       - pypika==0.48.9
       - pyproject-hooks==1.2.0
       - pyqtree==1.0.0
       - pyreadline3==3.5.4
-      - pyright==1.1.405
+      - pyright==1.1.406
       - pyserial==3.5
       - pysocks==1.7.1
       - pytest==8.4.2
       - python-dateutil==2.9.0.post0
       - python-dotenv==1.1.1
-      - python-json-logger==3.3.0
+      - python-json-logger==4.0.0
       - python-multipart==0.0.20
       - python-ulid==3.1.0
       - pythonnet==3.0.5
       - pytorch-lightning==2.5.5
       - pytz==2025.2
       - pywin32==311
-      - pywinpty==3.0.0
-      - pyyaml==6.0.2
+      - pywinpty==3.0.2
+      - pyyaml==6.0.3
       - pyzbar==0.1.9
       - pyzmq==27.1.0
-      - qh3==1.5.4
+      - qh3==1.5.5
       - qrcode==8.2
-      - referencing==0.36.2
-      - regex==2025.9.1
-      - reportlab==4.4.3
+      - referencing==0.37.0
+      - regex==2025.9.18
+      - reportlab==4.4.4
       - requests==2.32.5
       - requests-oauthlib==2.0.0
       - requests-toolbelt==1.0.0
       - rfc3339-validator==0.1.4
       - rfc3986-validator==0.1.1
       - rfc3987-syntax==1.1.0
-      - rich==14.1.0
+      - rich==14.2.0
       - rpds-py==0.27.1
       - rsa==4.9.1
-      - ruff==0.13.0
+      - ruff==0.14.0
       - safetensors==0.6.2
       - sam2==1.1.0
       - scikit-image==0.25.2
@@ -416,27 +420,28 @@ dependencies:
       - scipy==1.16.2
       - segment-anything==1.0
       - send2trash==1.8.3
-      - sentence-transformers==5.1.0
+      - sentence-transformers==5.1.1
       - setuptools==80.9.0
-      - shapely==2.1.1
+      - shapely==2.1.2
       - shellingham==1.5.4
       - simsimd==6.5.3
       - six==1.17.0
       - smmap==5.0.2
       - snakeviz==2.2.2
       - sniffio==1.3.1
+      - socksio==1.0.0
       - soupsieve==2.8
-      - sqlalchemy==2.0.43
-      - sqlalchemy-spanner==1.16.0
+      - sqlalchemy==2.0.44
+      - sqlalchemy-spanner==1.17.0
       - sqlite-fts4==1.0.3
       - sqlite-migrate==0.1b0
       - sqlite-utils==3.38
       - sqlparse==0.5.3
       - sse-starlette==3.0.2
       - stack-data==0.6.3
-      - starlette==0.47.3
-      - streamlit==1.49.1
-      - stringzilla==4.0.10
+      - starlette==0.48.0
+      - streamlit==1.50.0
+      - stringzilla==4.2.1
       - striprtf==0.0.26
       - sympy==1.13.1
       - tabulate==0.9.0
@@ -445,13 +450,13 @@ dependencies:
       - tenacity==8.5.0
       - terminado==0.18.1
       - threadpoolctl==3.6.0
-      - tifffile==2025.9.9
-      - tiktoken==0.11.0
-      - timm==1.0.19
+      - tifffile==2025.10.4
+      - tiktoken==0.12.0
+      - timm==1.0.20
       - tinycss2==1.4.0
-      - tokenizers==0.22.0
+      - tokenizers==0.22.1
       - toml==0.10.2
-      - tomli==2.2.1
+      - tomli==2.3.0
       - tomli-w==1.2.0
       - tomlkit==0.13.3
       - torch==2.6.0+cu126
@@ -461,36 +466,36 @@ dependencies:
       - tornado==6.5.2
       - tqdm==4.67.1
       - traitlets==5.14.3
-      - transformers==4.56.1
+      - transformers==4.57.1
       - typeguard==4.4.4
-      - typer==0.17.4
-      - types-python-dateutil==2.9.0.20250822
+      - typer==0.19.2
+      - types-python-dateutil==2.9.0.20251008
       - typing-extensions==4.15.0
       - typing-inspect==0.9.0
-      - typing-inspection==0.4.1
+      - typing-inspection==0.4.2
       - tzdata==2025.2
       - tzlocal==5.3.1
       - umf==0.11.0
       - uri-template==1.3.0
       - uritemplate==4.2.0
       - urllib3==2.5.0
-      - urllib3-future==2.13.909
-      - uvicorn==0.35.0
-      - wassima==2.0.1
+      - urllib3-future==2.14.904
+      - uvicorn==0.37.0
+      - wassima==2.0.2
       - watchdog==6.0.0
-      - watchfiles==1.1.0
-      - wcwidth==0.2.13
+      - watchfiles==1.1.1
+      - wcwidth==0.2.14
       - webcolors==24.11.1
       - webencodings==0.5.1
-      - websocket-client==1.8.0
+      - websocket-client==1.9.0
       - websockets==15.0.1
       - werkzeug==3.1.3
       - wheel==0.45.1
       - wrapt==1.17.3
       - xlsxwriter==3.2.9
-      - xxhash==3.5.0
-      - yarl==1.20.1
-      - yfinance==0.2.65
+      - xxhash==3.6.0
+      - yarl==1.22.0
+      - yfinance==0.2.66
       - yoctopuce==2.1.6320
       - zipp==3.23.0
       - zstandard==0.25.0
