--- a/architecture/Windows-x86_64/py313_win_x86_64_multi_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py313_win_x86_64_multi_conda_env_export.yml
@@ -37,6 +37,7 @@ dependencies:
       - anthropic==0.71.0
       - antlr4-python3-runtime==4.9.3
       - anyio==4.11.0
+      - arena-api==2.7.1
       - argon2-cffi==25.1.0
       - argon2-cffi-bindings==25.1.0
       - arrow==1.4.0
@@ -375,6 +376,7 @@ dependencies:
       - pygments==2.19.2
       - pyjwt==2.10.1
       - pylance==0.38.2
+      - pylucidio==2.4
       - pymage-size==1.7.1
       - pymodbustcp==0.3.0
       - pymupdf==1.26.5
