--- a/architecture/Windows-x86_64/py313_win_x86_64_multi_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py313_win_x86_64_multi_conda_env_export.yml
@@ -24,6 +24,7 @@ dependencies:
   - zlib=1.3.1=h02ab6af_0
   - pip:
       - absolufy-imports==0.3.1
+      - accelerate==1.10.1
       - agno==2.1.8
       - aiohappyeyeballs==2.6.1
       - aiohttp==3.13.1
@@ -84,6 +85,7 @@ dependencies:
       - cycler==0.12.1
       - cython==3.1.4
       - dataclasses-json==0.6.7
+      - datasets==4.2.0
       - db-dtypes==1.4.3
       - ddgs==9.6.1
       - debugpy==1.8.17
@@ -91,6 +93,7 @@ dependencies:
       - defusedxml==0.7.1
       - deprecated==1.2.18
       - deprecation==2.1.0
+      - dill==0.4.0
       - dirtyjson==1.0.8
       - diskcache==5.6.3
       - distro==1.9.0
@@ -98,6 +101,7 @@ dependencies:
       - docstring-parser==0.17.0
       - docutils==0.22.2
       - durationpy==0.10
+      - einops==0.8.1
       - email-validator==2.3.0
       - eval-type-backport==0.2.2
       - executing==2.2.1
@@ -106,6 +110,7 @@ dependencies:
       - fastjsonschema==2.21.2
       - filelock==3.20.0
       - filetype==1.2.0
+      - fla-core==0.3.2
       - flake8==7.3.0
       - flask==3.1.2
       - flatbuffers==25.2.10
@@ -287,6 +292,7 @@ dependencies:
       - msal==1.34.0
       - msal-extensions==1.3.1
       - multidict==6.7.0
+      - multiprocess==0.70.16
       - multitasking==0.0.12
       - mypy-extensions==1.1.0
       - narwhals==2.8.0
