--- a/architecture/Windows-x86_64/py313_win_x86_64_multi_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py313_win_x86_64_multi_conda_env_export.yml
@@ -83,7 +83,7 @@ dependencies:
       - cryptography==46.0.3
       - curl-cffi==0.13.0
       - cycler==0.12.1
-      - cython==3.1.4
+      - cython==3.1.5
       - dataclasses-json==0.6.7
       - datasets==4.2.0
       - db-dtypes==1.4.3
@@ -112,6 +112,7 @@ dependencies:
       - filetype==1.2.0
       - fla-core==0.3.2
       - flake8==7.3.0
+      - flash-linear-attention==0.3.2
       - flask==3.1.2
       - flatbuffers==25.2.10
       - fonttools==4.60.1
